--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "reset";
+@import "variables";
 @import "fonts";
 
 body {
@@ -20,8 +21,19 @@ $maxWidth: 480;
 }
 
 body {
-	background-color: black;
+	background-color: var(--tg-theme-secondary-bg-color);
+}
+
+.container {
+	background-color: var(--tg-theme-bg-color);
+}
+.grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 10px;
+}
+.item {
+	background-color: gray;
 }
 
 //===========================================================
-
