--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,10 +34,18 @@ button {
   cursor: pointer;
   text-align: center;
   display: inline-block;
+  border: 0;
 }
 
 textarea, input {
   font: inherit;
+}
+
+:root {
+  --tg-theme-secondary-bg-color: lightblue;
+  --tg-theme-bg-color: #171744;
+  --button-color: #0257D8;
+  --block-color: #D9D9D9;
 }
 
 body {
@@ -51,6 +59,7 @@ body {
 
 body {
   background-color: var(--tg-theme-secondary-bg-color);
+  font-size: 16px;
 }
 
 .container {
@@ -65,4 +74,26 @@ body {
 
 .item {
   background-color: gray;
+}
+
+.intro {
+  padding-top: 40px;
+}
+.intro__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.intro-btn {
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  color: white;
+  border: 1px solid white;
+  padding: 5px 0;
+}
+.intro-btn__text {
+  font-size: 20px;
 }
