--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,4 +1,7 @@
 
-// :root {
-// 	--tg-theme-secondary-bg-color: lightblue;
-// }
+:root {
+	--tg-theme-secondary-bg-color: lightblue;
+	--tg-theme-bg-color: #171744;
+	--button-color: #0257D8;
+	--block-color: #D9D9D9;
+}
