--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,26 +58,13 @@ body {
 }
 
 body {
-  background-color: var(--tg-theme-secondary-bg-color);
-  font-size: 16px;
-}
-
-.container {
   background-color: var(--tg-theme-bg-color);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-}
-
-.item {
-  background-color: gray;
+  font-size: 16px;
 }
 
 .intro {
   padding-top: 40px;
+  height: 100%;
 }
 .intro__wrapper {
   display: flex;
@@ -91,8 +78,17 @@ body {
   align-items: center;
   gap: 20px;
   color: white;
-  border: 1px solid white;
-  padding: 5px 0;
+  padding: 8px 0;
+  position: relative;
+}
+.intro-btn::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, var(--block-color) 50%, transparent);
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 .intro-btn__text {
   font-size: 20px;
