--- a/scss/intro.scss
+++ b/scss/intro.scss
@@ -1,5 +1,6 @@
 .intro {
 	padding-top: 40px;
+	height: 100%;
 	&__wrapper {
 		display: flex;
 		flex-direction: column;
@@ -13,8 +14,19 @@
 	align-items: center;
 	gap: 20px;
 	color: white;
-	border: 1px solid white;
-	padding: 5px 0;
+	padding: 8px 0;
+	position: relative;
+
+	&::after {
+		content: '';
+		width: 100%;
+		height: 2px;
+		background: linear-gradient(90deg, var(--block-color) 50%, transparent);
+		position: absolute;
+		bottom: 0;
+		left: 0;
+	}
+
 	&__img {
 	}
 
