--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,23 +21,14 @@ $maxWidth: 480;
 }
 
 body {
-	background-color: var(--tg-theme-secondary-bg-color);
+	background-color: var(--tg-theme-bg-color);
+
 	font-size: 16px;
 }
 
 .container {
-	background-color: var(--tg-theme-bg-color);
-}
-
-.grid {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 10px;
-}
-.item {
-	background-color: gray;
 }
 
 //===========================================================
 
-@import 'intro';
+@import "intro";
