--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,7 +21,7 @@ $maxWidth: 480;
 }
 
 body {
-	background-color: var(--tg-theme-bg-color);
+	background-color: var(--bg-color);
 
 	font-size: 16px;
 }
