--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   font-size: 16px;
-  padding: 20px 0;
+  padding-bottom: 20px;
 }
 .breadcrumbs__item {
   color: white;
@@ -104,6 +104,7 @@ body {
 
 section {
   display: none;
+  padding: 20px 0;
 }
 section.active {
   display: block;
@@ -184,7 +185,7 @@ section.active {
   border-radius: 16px;
   padding: 10px 8px 16px;
   background-color: var(--bg-color);
-  width: 95%;
+  width: min(95%, 350px);
   margin: 85px auto 0;
 }
 .calendar__selects {
@@ -192,6 +193,11 @@ section.active {
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+.calendar__selects .select-with-image__list {
+  overflow-y: auto;
+  height: -moz-max-content;
+  height: max-content;
 }
 .calendar__body {
   margin-top: 8px;
@@ -248,7 +254,7 @@ section.active {
   content: "";
   width: 100%;
   height: 2px;
-  background: linear-gradient(90deg, var(--block-color) 50%, transparent);
+  background: linear-gradient(90deg, var(--block-color) 70%, transparent);
   position: absolute;
   bottom: 0;
   left: 0;
@@ -265,7 +271,7 @@ section.active {
   margin-top: 20px;
 }
 .groups__course {
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(65px, 1fr));
   gap: 6px;
   display: none;
 }
@@ -354,6 +360,10 @@ section.active {
   margin-bottom: 20px;
   font-weight: 400;
   font-size: 16px;
+}
+
+.history-group .write-group__count {
+  text-align: center;
 }
 
 .dn {
