--- a/public/css/style.css
+++ b/public/css/style.css
@@ -225,14 +225,20 @@ section.active {
   padding: 6px;
   cursor: default;
 }
-.calendar__body table td:not(.extra) {
+.calendar__body table td:not(.extra):not(.cur) {
   cursor: pointer;
 }
 .calendar__body table .extra {
   opacity: 0.5;
 }
+.calendar__body table .active {
+  box-shadow: inset 0 0 0 3px white;
+  border-radius: 5px;
+}
 .calendar__body table .cur {
-  box-shadow: inset 0 0 0 1px white;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: var(--bg-color);
+  border-radius: 5px;
 }
 .calendar__apply-btn {
   margin-left: auto;
